# migaman

./: .ghci  .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  justfile  migadu.cabal  migaman.cabal  migaman.toml.sample
app/: Main.hs
migadu/: CHANGELOG.md  migadu.cabal
migadu/src/: Fields.hs  Mailbox.hs  Migadu.hs
migadu/src/Migadu/: Fields.hs  Identity.hs  Mailbox.hs
migrations/: 20241230112116_create_identity_table.sql  20250101234250_add_domain_and_target_to_identity.sql  20250207222721_add_enabled_to_identity.sql
nix/: migaman.nix
src/: Cli.hs  Identity.hs  Migadu.hs  Migaman.hs  Migrations.hs  MyLib.hs
src/IdentityTable/: Model.hs  Query.hs
