cabal-version:   3.0
name:            migaman
version:         0.1.0.0

-- synopsis:
-- description:
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          Berk Özkütük
maintainer:      berk@ozkutuk.me

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common common-extensions
  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot

  default-language:   GHC2021

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wpartial-fields
    -Wredundant-constraints -fhide-source-paths -fshow-hole-constraints
    -Wunused-packages

library
  import:
    warnings
    , common-extensions

  exposed-modules:  MyLib
  build-depends:
    , base                  ^>=4.19.1.0
    , beam-core
    , beam-sqlite
    , bytestring
    , directory
    , file-embed
    , migadu
    , optparse-applicative
    , random
    , sqlite-simple
    , tabular
    , text
    , toml-reader

  hs-source-dirs:   src
  default-language: GHC2021

executable migaman
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base     ^>=4.19.1.0
    , migadu
    , migaman

  hs-source-dirs:   app
  default-language: GHC2021

test-suite migaman-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base     ^>=4.19.1.0
    , migaman
